Fix for Horizontal Alignment = Justify in gx-image control
issue: 95539, 95540

--- a/src/components/common/_base.scss
+++ b/src/components/common/_base.scss
@@ -48,11 +48,8 @@ $gx-xsmall-breakpoint-plus-1: 769px;
     @include overflowMode();
   }
 
-  &:not([align]),
   &[align="left"] {
-    & > * {
-      justify-content: flex-start;
-    }
+    justify-content: flex-start;
   }
 
   &[align="center"] {
